force-app/main/default/objects/Case/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to indicate if the case is actively being work or not.</description>
    <label>Time Currently Logging</label>
    <type>Checkbox</type>
</CustomField>