force-app/main/default/objects/Case/fields/Actual_Hours_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Actual_Hours_to_Complete__c</fullName>
    <label>Actual Hours to Complete</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>