force-app/main/default/objects/Case/fields/Approval_Process__c.field-meta.xml
<CustomField>
    <fullName>Approval_Process__c</fullName>
    <label>Approval Process</label>
    <length>255</length>
    <type>Text</type>
</CustomField>