force-app/main/default/objects/Case/fields/cc_Story_and_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>cc_Story_and_Account_Name__c</fullName>
    <formula>Subject &amp; &quot; (&quot; &amp; Account.Name &amp; &quot;)&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Story and Account Name</label>
    <type>Text</type>
</CustomField>