force-app/main/default/objects/Case/fields/Closing_Procedure__c.field-meta.xml
<CustomField>
    <fullName>Closing_Procedure__c</fullName>
    <label>Closing Procedure</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>