force-app/main/default/objects/Case/fields/CloudCrest_Priority__c.field-meta.xml
<CustomField>
    <fullName>CloudCrest_Priority__c</fullName>
    <label>CloudCrest Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P1</fullName>
                <label>P1 -- Immediate / Interrupt Work</label>
            </value>
            <value>
                <fullName>P2</fullName>
                <label>P2 -- Next Up / Short-Horizon Work</label>
            </value>
            <value>
                <fullName>P3</fullName>
                <label>P3 -- Planned / Normal Work</label>
            </value>
            <value>
                <fullName>P4</fullName>
                <label>P4 -- Backlog / Opportunistic</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>