force-app/main/default/objects/Case/fields/Complete_Today__c.field-meta.xml
<CustomField>
    <fullName>Complete_Today__c</fullName>
    <formula>DATEVALUE( Projected_Completion_Date_Time__c ) = TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complete Today</label>
    <type>Checkbox</type>
</CustomField>