force-app/main/default/objects/Case/fields/Components_to_Deploy__c.field-meta.xml
<CustomField>
    <fullName>Components_to_Deploy__c</fullName>
    <label>Components to Deploy</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>