force-app/main/default/objects/Case/fields/Current_Time_Logging_Description__c.field-meta.xml
<CustomField>
    <fullName>Current_Time_Logging_Description__c</fullName>
    <label>Current Time Logging Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>