force-app/main/default/objects/Case/fields/Customer_Priority__c.field-meta.xml
<CustomField>
    <fullName>Customer_Priority__c</fullName>
    <description>used to determine what the client wants us to work on first</description>
    <label>Customer Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
            </value>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>