force-app/main/default/objects/Case/fields/Deliverable_Created__c.field-meta.xml
<CustomField>
    <fullName>Deliverable_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deliverable Created</label>
    <type>Checkbox</type>
</CustomField>