force-app/main/default/objects/Case/fields/Deployment_Steps__c.field-meta.xml
<CustomField>
    <fullName>Deployment_Steps__c</fullName>
    <label>Deployment Steps</label>
    <type>TextArea</type>
</CustomField>