force-app/main/default/objects/Case/fields/DOZISF__ZoomInfo_Opsos_App_Field__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Opsos_App_Field__c</fullName>
    <label>ZoomInfo Opsos App Field</label>
    <length>150</length>
    <type>Text</type>
</CustomField>