force-app/main/default/objects/Case/fields/DOZISF__ZoomInfo_Opsos_Current_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Opsos_Current_Endpoint__c</fullName>
    <label>ZoomInfo Opsos Current Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>