force-app/main/default/objects/Case/fields/DOZISF__ZoomInfo_Opsos_Last_Processed_Date__c.field-meta.xml
<CustomField>
    <fullName>DOZISF__ZoomInfo_Opsos_Last_Processed_Date__c</fullName>
    <label>ZoomInfo Opsos Last Processed Date</label>
    <type>DateTime</type>
</CustomField>