force-app/main/default/objects/Case/fields/Epic__c.field-meta.xml
<CustomField>
    <fullName>Epic__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Epic</label>
    <referenceTo>Sprint_Items__c</referenceTo>
    <relationshipLabel>Story</relationshipLabel>
    <relationshipName>Story</relationshipName>
    <type>Lookup</type>
</CustomField>