force-app/main/default/objects/Case/fields/Execution_Gap__c.field-meta.xml
<CustomField>
    <fullName>Execution_Gap__c</fullName>
    <description>time difference between estimate and actual</description>
    <formula>Hours_Estimate_to_Complete__c - Actual_Hours_to_Complete__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Execution Gap</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>