force-app/main/default/objects/Case/fields/Hours_Estimate_to_Complete__c.field-meta.xml
<CustomField>
    <fullName>Hours_Estimate_to_Complete__c</fullName>
    <label>Hours Estimate to Complete</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>