force-app/main/default/objects/Case/fields/MAP_Proposed__c.field-meta.xml
<CustomField>
    <fullName>MAP_Proposed__c</fullName>
    <label>MAP Proposed</label>
    <type>DateTime</type>
</CustomField>