force-app/main/default/objects/Case/fields/Mutual_Action_Plan_Proposal__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Action_Plan_Proposal__c</fullName>
    <label>Mutual Action Plan Proposal</label>
    <type>DateTime</type>
</CustomField>