force-app/main/default/objects/Case/fields/Mutual_Action_Plan_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Mutual_Action_Plan_Sent_Date__c</fullName>
    <description>Used to capture when the CloudCrest HelpDesk team respond to customers</description>
    <label>Mutual Action Plan Sent Date</label>
    <type>DateTime</type>
</CustomField>