force-app/main/default/objects/Case/fields/Planned_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Start_Date__c</fullName>
    <label>Planned Start Date</label>
    <type>Date</type>
</CustomField>