force-app/main/default/objects/Case/fields/Projected_Completion_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Projected_Completion_Date_Time__c</fullName>
    <label>Projected Completion Date/Time</label>
    <type>DateTime</type>
</CustomField>