force-app/main/default/objects/Case/fields/Projected_Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Projected_Start_Date_Time__c</fullName>
    <inlineHelpText>Used to help manage calendar</inlineHelpText>
    <label>Projected Start Date/Time</label>
    <type>DateTime</type>
</CustomField>