force-app/main/default/objects/Case/fields/Projects__c.field-meta.xml
<CustomField>
    <fullName>Projects__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Projects (New) 
Projects_new__c</description>
    <label>Projects</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Sprint__c.Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sprint__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>