force-app/main/default/objects/Case/fields/Q_A__c.field-meta.xml
<CustomField>
    <fullName>Q_A__c</fullName>
    <label>Q&amp;A</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>