force-app/main/default/objects/Case/fields/Sandbox_Requested__c.field-meta.xml
<CustomField>
    <fullName>Sandbox_Requested__c</fullName>
    <label>Sandbox Requested</label>
    <length>225</length>
    <type>Text</type>
</CustomField>