force-app/main/default/objects/Case/fields/Scope__c.field-meta.xml
<CustomField>
    <fullName>Scope__c</fullName>
    <description>Used to translate user request and house information on what is being requested. 

Description = user defining 
Scope = CloudCrest defining / clarifying</description>
    <label>Scope</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>