force-app/main/default/objects/Case/fields/Solution__c.field-meta.xml
<CustomField>
    <fullName>Solution__c</fullName>
    <description>Used to hold our proposed solution for the case</description>
    <label>Solution</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>