force-app/main/default/objects/Case/fields/Sprint_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Start_Date__c</fullName>
    <label>Sprint Start Date</label>
    <type>Date</type>
</CustomField>