force-app/main/default/objects/Case/fields/Sprint_Week__c.field-meta.xml
<CustomField>
    <fullName>Sprint_Week__c</fullName>
    <label>Sprint Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>