force-app/main/default/objects/Case/fields/Story_Support__c.field-meta.xml
<CustomField>
    <fullName>Story_Support__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Story Support</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Story Support Cases</relationshipLabel>
    <relationshipName>Story_Support_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>