force-app/main/default/objects/Case/fields/Story_Task_Estimated_Hours__c.field-meta.xml
<CustomField>
    <fullName>Story_Task_Estimated_Hours__c</fullName>
    <label>Story Task Estimated Hours</label>
    <summarizedField>Story_Task__c.Estimated_Effort__c</summarizedField>
    <summaryForeignKey>Story_Task__c.Story__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>