force-app/main/default/objects/Case/fields/Support_Contact__c.field-meta.xml
<CustomField>
    <fullName>Support_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Support Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Support Contact Cases</relationshipLabel>
    <relationshipName>Support_Contact_Cases</relationshipName>
    <type>Lookup</type>
</CustomField>