force-app/main/default/objects/Case/fields/Support_Message_Pending__c.field-meta.xml
<CustomField>
    <fullName>Support_Message_Pending__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Message Pending</label>
    <type>Checkbox</type>
</CustomField>