force-app/main/default/objects/Case/fields/Time_Logged_on_Story__c.field-meta.xml
<CustomField>
    <fullName>Time_Logged_on_Story__c</fullName>
    <label>Time Logged on Story</label>
    <summarizedField>Time__c.Time_Spent__c</summarizedField>
    <summaryForeignKey>Time__c.Case__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>