force-app/main/default/objects/Case/fields/Time_Logging_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Time_Logging_Start_Time__c</fullName>
    <label>Time Logging Start Time</label>
    <type>DateTime</type>
</CustomField>