force-app/main/default/objects/Case/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Used to organize the type of request we are getting from users and assigning to the correct party internally or externally</description>
    <label>Story Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General Support / How-To</fullName>
            </value>
            <value>
                <fullName>System Issues / Bugs</fullName>
            </value>
            <value>
                <fullName>Configuration / Enhancement</fullName>
            </value>
            <value>
                <fullName>User Access / Permissions</fullName>
            </value>
            <value>
                <fullName>Integration / API Issues</fullName>
            </value>
            <value>
                <fullName>Critical System Failures</fullName>
            </value>
            <value>
                <fullName>Views, Reporting, Dashboards</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>