force-app/main/default/objects/Case/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <businessProcess>Inbound</businessProcess>
    <label>Inbound</label>
</RecordType>