force-app/main/default/objects/Case/recordTypes/Internally_Created.recordType-meta.xml
<RecordType>
    <fullName>Internally_Created</fullName>
    <active>true</active>
    <businessProcess>Internally Created</businessProcess>
    <label>Internally Created</label>
</RecordType>