force-app/main/default/objects/Case/listViews/All_Stories_in_My_Name.listView-meta.xml
<ListView>
    <fullName>All_Stories_in_My_Name</fullName>
    <columns>Projects__c</columns>
    <columns>Epic__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Projected_Start_Date_Time__c</columns>
    <columns>Projected_Completion_Date_Time__c</columns>
    <columns>Hours_Estimate_to_Complete__c</columns>
    <columns>OWNER_NAME</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Cancelled,Closed</value>
    </filters>
    <label>All Ryan&apos;s Stories</label>
</ListView>