force-app/main/default/objects/Case/listViews/Copy_of_My_Stories_Inbound.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Stories_Inbound</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>cc_Story_and_Account_Name__c</columns>
    <columns>Epic__c</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Priority_Number__c</columns>
    <columns>CloudCrest_Priority__c</columns>
    <columns>Customer_Priority__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Inbound</value>
    </filters>
    <label>My Stories - Inbound</label>
</ListView>