force-app/main/default/objects/Case/listViews/Copy_of_My_Stories_Internally_Created.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Stories_Internally_Created</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>Epic__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>CASES.STATUS</columns>
    <columns>Priority_Number__c</columns>
    <columns>Time_Logged_on_Story__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internally_Created</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Migration</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Project Management</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notContain</operation>
        <value>Meeting</value>
    </filters>
    <filters>
        <field>Priority_Number__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>My Priorities</label>
</ListView>