force-app/main/default/objects/Case/listViews/Copy_of_My_Story.listView-meta.xml
<ListView>
    <fullName>Copy_of_My_Story</fullName>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>NAME</columns>
    <columns>Hours_Estimate_to_Complete__c</columns>
    <columns>Epic__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.Internally_Created</value>
    </filters>
    <label>New Stories</label>
</ListView>