force-app/main/default/objects/Case/listViews/CURA_ALL_CASES.listView-meta.xml
<ListView>
    <fullName>CURA_ALL_CASES</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Priority_Number__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Cura</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed,Cancelled</value>
    </filters>
    <filters>
        <field>CASES.SUBJECT</field>
        <operation>notEqual</operation>
        <value>Cura Meetings,Cura Historical Time</value>
    </filters>
    <label>CURA -- All Cases</label>
</ListView>