force-app/main/default/objects/Case/listViews/HyperLux_All_Cases.listView-meta.xml
<ListView>
    <fullName>HyperLux_All_Cases</fullName>
    <columns>CREATEDBY_USER.ALIAS</columns>
    <columns>Epic__c</columns>
    <columns>Projects__c</columns>
    <columns>Priority_Number__c</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.NAME</field>
        <operation>contains</operation>
        <value>Hyperlux</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>HyperLux -- All Cases</label>
</ListView>