force-app/main/default/objects/Case/listViews/In_Progress_Stories.listView-meta.xml
<ListView>
    <fullName>In_Progress_Stories</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>Hours_Estimate_to_Complete__c</columns>
    <columns>Projected_Completion_Date_Time__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Priority_Number__c</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>Working,Waiting for User,In Review,In UAT</value>
    </filters>
    <label>In Progress Stories</label>
</ListView>