force-app/main/default/objects/Case/listViews/My_New_Stories.listView-meta.xml
<ListView>
    <fullName>My_New_Stories</fullName>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>Hours_Estimate_to_Complete__c</columns>
    <columns>Epic__c</columns>
    <columns>Projects__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>New</value>
    </filters>
    <label>Ryan&apos;s New Stories</label>
</ListView>