force-app/main/default/objects/Case/listViews/My_Recently_Viewed_Stories.listView-meta.xml
<ListView>
    <fullName>My_Recently_Viewed_Stories</fullName>
    <columns>CASES.LAST_UPDATE</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE</columns>
    <filterScope>Mine</filterScope>
    <label>My Recently Viewed Stories</label>
</ListView>