force-app/main/default/objects/Case/listViews/My_Stories_Scheduled_Today.listView-meta.xml
<ListView>
    <fullName>My_Stories_Scheduled_Today</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Projected_Completion_Date_Time__c</field>
        <operation>equals</operation>
        <value>THIS_WEEK</value>
    </filters>
    <label>My Stories Scheduled Today</label>
</ListView>