force-app/main/default/objects/Case/listViews/PBO_Build_2026.listView-meta.xml
<ListView>
    <fullName>PBO_Build_2026</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Projects__c</field>
        <operation>contains</operation>
        <value>PBO Internal Development 2026</value>
    </filters>
    <label>PBO Internal Development 2026</label>
</ListView>