force-app/main/default/objects/Case/listViews/PBO_Build_Stories.listView-meta.xml
<ListView>
    <fullName>PBO_Build_Stories</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Projects__c</field>
        <operation>contains</operation>
        <value>PBO Build</value>
    </filters>
    <label>PBO Build Stories</label>
</ListView>